Projeto MoonBurguer até aula 69

--- a/MoonBurger/Views/CarrinhoCompra/Index.cshtml
+++ b/MoonBurger/Views/CarrinhoCompra/Index.cshtml
@@ -31,7 +31,7 @@
                         </td>
 
                         <td class="text-center">
-                            <a asp-controller="CarrinhoCompra" asp-action="RemoverItemDoCarrinhoCompra" asp-route-lancheId="@item.Lanche.LancheId">
+                            <a asp-controller="CarrinhoCompra" asp-action="RemoverItemNoCarrinhoCompra" asp-route-lancheId="@item.Lanche.LancheId">
                                 <img src="~/images/remove.ico" width="24"/>
                             </a>
                         </td>
@@ -50,8 +50,8 @@
 
         <div class="text-right">
             <div class="btn-group">
-@*                <a class="btn btn-success" asp-controller="Pedido" asp-action="Checkout">Encerrar Pedido</a>
-*@                &nbsp;&nbsp;&nbsp;
+               <a class="btn btn-success" asp-controller="Pedido" asp-action="Checkout">Encerrar Pedido</a>
+                &nbsp;&nbsp;&nbsp;
                 <a class="btn btn-primary" asp-controller="Lanche" asp-action="List">Continuar Comprando</a>
             </div>
         </div>
