--- a/MoonBurger/Views/Shared/_Layout.cshtml
+++ b/MoonBurger/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                             <input type="text" class="form-control" placeholder="procurar produto" name="searchString" value="@ViewData["searchString"]" />
                         </div>
                     </form>
+                    @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </nav>
